[workspace]
resolver = "2"
members = [
    "crates/anytype_rs",
    "crates/nu_plugin_anytype",
]

[workspace.package]
version = "0.0.4"
authors = ["Lane Sawyer <github@lanesawyer.dev>", "Mark Watts <18381+mwatts@users.noreply.github.com>"]
edition = "2024"
license = "GPL-3.0"
repository = "https://github.com/mwatts/anytype_rs"

[workspace.dependencies]
# Shared dependencies across workspace members
anyhow = "1.0.100"
anytype_rs = { path = "crates/anytype_rs" }
clap = { version = "4.5.49", features = ["derive"] }
dashmap = "6.1"
dirs = "6.0.0"
gray_matter = "0.3.2"
nu-plugin = "0.108.0"
nu-plugin-test-support = "0.108.0"
nu-protocol = "0.108.0"
proptest = "1.4"
insta = { version = "1.34", features = ["json"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
typetag = "0.2"

# CLI binary at workspace root (Rust standard layout)
[package]
name = "anytype-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "atc"
path = "bin/cli/main.rs"

[[bin]]
name = "nu_plugin_anytype"
path = "crates/nu_plugin_anytype/src/main.rs"

[dependencies]
anytype_rs.workspace = true
anyhow.workspace = true
clap.workspace = true
dashmap.workspace = true
dirs.workspace = true
gray_matter.workspace = true
nu-plugin.workspace = true
nu-protocol.workspace = true
nu_plugin_anytype = { path = "crates/nu_plugin_anytype" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
typetag.workspace = true
